# breakout-gui

./: CMakeLists.txt  README.md
build-gui/: CMakeCache.txt  CTestTestfile.cmake  Makefile  breakout_app  breakout_core_tests  breakout_core_tests[1]_include.cmake  breakout_core_tests[1]_tests.cmake  cmake_install.cmake
build-gui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-gui/Testing/Temporary/: CTestCostData.txt
build-gui/breakout_app_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-gui/breakout_app_autogen/YPKJ5OE7LN/: moc_endgame_editor.cpp  moc_endgame_editor.cpp.d  moc_game_widget.cpp  moc_game_widget.cpp.d  moc_main_window.cpp  moc_main_window.cpp.d
build-gui/breakout_app_autogen/include/: main_window.moc  main_window.moc.d
build-gui/breakout_core_autogen/: deps
build-gui/breakout_core_autogen/SG3YC7EIDC/: moc_config_manager.cpp  moc_config_manager.cpp.d
build-gui/breakout_core_tests_autogen/: deps  moc_predefs.h
build-gui/endgames/: 34.end  currnet.end  endgame.end  endgame1.end  endgame11.end  endgame2.end  endgame4.end  ff.end  hi.end  mygame.end
docs/: manual_config_checklist.md
src/: main.cpp
src/core/entities/: ball.cpp  ball.h  brick.cpp  brick.h  paddle.cpp  paddle.h
src/core/game/: endgame_state.h  game_engine.cpp  game_engine.h  level_manager.cpp  level_manager.h  physics_engine.cpp  physics_engine.h
src/core/utils/: collision.cpp  collision.h  random.cpp  random.h  vector2d.cpp  vector2d.h
src/data/: config_manager.cpp  config_manager.h  endgame_manager.cpp  endgame_manager.h
src/ui/: endgame_editor.cpp  endgame_editor.h  game_widget.cpp  game_widget.h  main_window.cpp  main_window.h
tests/: config_tests.cpp  core_tests.cpp
